--- a/package.json
+++ b/package.json
@@ -18,9 +18,16 @@
     "dist"
   ],
   "devDependencies": {
-    "father": "^4.0.0",
-    "umi": "^4.0.64",
+    "@types/jest": "^29.5.0",
+    "@types/lodash": "^4.14.192",
     "@types/node": "^18.0.0",
-    "typescript": "^5.0.0"
+    "father": "^4.0.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.0",
+    "umi": "^4.0.64"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
