--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "dist/cjs/index.d.ts",
   "scripts": {
     "dev": "father dev",
-    "build": "father build"
+    "build": "father build",
+    "test": "jest"
   },
   "keywords": [],
   "authors": {
@@ -24,6 +25,7 @@
     "father": "^4.0.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
+    "typedoc": "^0.23.28",
     "typescript": "^5.0.0",
     "umi": "^4.0.64"
   },
