--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "father dev",
     "build": "father build",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "authors": {
@@ -19,13 +20,19 @@
     "dist"
   ],
   "devDependencies": {
+    "@types/fs-extra": "^11.0.1",
     "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.192",
     "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "eslint": "^8.37.0",
     "father": "^4.0.0",
+    "fs-extra": "^11.1.1",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "typedoc": "^0.23.28",
+    "typedoc-plugin-missing-exports": "^1.0.0",
     "typescript": "^5.0.0",
     "umi": "^4.0.64"
   },
