--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "fs-extra": "^11.1.1",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
-    "typedoc": "^0.23.28",
-    "typedoc-plugin-missing-exports": "^1.0.0",
     "typescript": "^5.0.0",
     "umi": "^4.0.64"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "typedoc": "^0.23.28",
+    "typedoc-plugin-missing-exports": "^1.0.0"
   }
 }
