--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@typescript-eslint/parser": "^5.57.0",
     "eslint": "^8.37.0",
     "father": "^4.0.0",
-    "fs-extra": "^11.1.1",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.0",
@@ -37,6 +36,7 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "typedoc": "^0.23.28",
-    "typedoc-plugin-missing-exports": "^1.0.0"
+    "typedoc-plugin-missing-exports": "^1.0.0",
+    "fs-extra": "^11.1.1"
   }
 }
