--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "father dev",
     "build": "father build",
     "test": "jest",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "prepublish": "npm run build"
   },
   "keywords": [],
   "authors": {
