--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8.37.0",
     "father": "^4.0.0",
     "jest": "^29.5.0",
+    "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.0",
     "umi": "^4.0.64"
